add html and css for top-nav

--- a/main.html
+++ b/main.html
@@ -36,13 +36,8 @@
 </nav>
 
 
-<header class="jumbotron">
-  <div class="container">
-    <h1>jQuery Shopper</h1>
-    <h2>An Application built to make creating your shopping list an enjoyable task.</h2>
-    <button>Start Now!</button>
-  </div>
-</header>
+
+<!-- APPLICATION GOES HERE -->
 
   
 </body>
