add html and css for jumbotron and about-app section

--- a/index.html
+++ b/index.html
@@ -35,14 +35,36 @@
   </div>
 </nav>
 
-
 <header class="jumbotron">
   <div class="container">
-    <h1>jQuery Shopper</h1>
-    <h2>An Application built to make creating your shopping list an enjoyable task.</h2>
-    <button>Start Now!</button>
+    <hgroup>
+      <h1>jQuery Shopper</h1>
+      <h2>An Application built to make creating your shopping list an enjoyable task.</h2>
+      <button class="pull-right">Start Now!</button>
+    </hgroup>
   </div>
 </header>
+
+<div class="about-app">
+  <div class="grid">
+    <div class="tiles row">
+      <div class="tile four-col">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, hic!</p>
+      </div>
+      <div class="tile four-col">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, hic!</p>
+      </div>
+      <div class="tile four-col">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consequatur tempore corporis architecto omnis fuga cupiditate, delectus at non qui. Fugit est officia vitae autem adipisci ullam ea deserunt saepe molestias. Fugit itaque voluptates quisquam ducimus, necessitatibus, ipsam aperiam consequuntur!</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<footer>
+  <p>hello there</p>
+</footer>
 
   
 </body>
