--- a/index.html
+++ b/index.html
@@ -49,13 +49,18 @@
   <div class="grid">
     <div class="tiles row">
       <div class="tile four-col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, hic!</p>
+        <i class="fa fa-laptop teal-about"></i>
+        <h3>Save time by moving your shopping tasks to the web.</h3>
       </div>
       <div class="tile four-col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, hic!</p>
+        <i class="fa fa-tasks"></i>
+        <h3>Add and create shopping tasks and mark them off when they are complete.</h3>
       </div>
       <div class="tile four-col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consequatur tempore corporis architecto omnis fuga cupiditate, delectus at non qui. Fugit est officia vitae autem adipisci ullam ea deserunt saepe molestias. Fugit itaque voluptates quisquam ducimus, necessitatibus, ipsam aperiam consequuntur!</p>
+        <a href="main.html">
+          <i class="fa fa-arrow-circle-right red-about"></i>
+        </a>
+        <h3 class="start-shopping">Start your shopping list now.</h3>
       </div>
     </div>
   </div>
@@ -66,6 +71,9 @@
   <p>hello there</p>
 </footer>
 
-  
+
+
+<script src="js/jquery.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
