basic layout for main.html

--- a/main.html
+++ b/main.html
@@ -39,6 +39,35 @@
 
 <!-- APPLICATION GOES HERE -->
 
+<main role="main">
+  <div class="container">
+    
+    <div class="grid">
+      
+      <div class="left-side five-col">
+        <input type="text" id="task" placeholder="Enter shopping item...">
+        <ul class="tooltip">
+          <li class="tip"><span class="check"><i class="fa fa-check"></i></span>press 'enter' to create item</li>
+          <li class="tip"><span class="check"><i class="fa fa-check"></i></span>press 'esc' to clear the text field</li>
+          <li class="tip"><span class="check"><i class="fa fa-check"></i></span>press 'down-array' key to get bigger text box</li>
+        </ul>
+      </div>
+
+      <div class="right-side six-col one-offset">
+        <h2>Your Shopping List</h2>
+      </div>
+
+    </div>
+
+  </div>
+</main>
+
   
+<footer>
+  <p>footer</p>
+</footer>
+
+<script src="js/jquery.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
