add html and styles for left-side of main.html

--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
   <!-- Google Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/reset.css">
@@ -51,6 +52,13 @@
           <li class="tip"><span class="check"><i class="fa fa-check"></i></span>press 'esc' to clear the text field</li>
           <li class="tip"><span class="check"><i class="fa fa-check"></i></span>press 'down-array' key to get bigger text box</li>
         </ul>
+
+        <div class="how-it-works">
+          <h3>How it works</h3>
+          <p>Enter shopping items into the text area above.</p>
+          <p>They will show up to the right and will be marked as <span class="red">incomplete.</span>.</p>
+          <p>Once the item is completed, click complete and the item will be marked <span class="green">complete</span>, and will move to the bottom of the list.</p>
+        </div>
       </div>
 
       <div class="right-side six-col one-offset">
