right before start coding jquery

--- a/main.html
+++ b/main.html
@@ -63,6 +63,15 @@
 
       <div class="right-side six-col one-offset">
         <h2>Your Shopping List</h2>
+
+        <ul class="task-list">
+          <li class="task">
+            <h4>Hardcoded task #1</h4>
+          </li>
+          <li class="task">
+            <h4>Hardcoded task #2</h4>
+          </li>
+        </ul>
       </div>
 
     </div>
