add jquery keyboard events to either add a list item, or to alter the text field

--- a/main.html
+++ b/main.html
@@ -36,10 +36,6 @@
   </div>
 </nav>
 
-
-
-<!-- APPLICATION GOES HERE -->
-
 <main role="main">
   <div class="container">
     
@@ -47,6 +43,10 @@
       
       <div class="left-side five-col">
         <input type="text" id="task" placeholder="Enter shopping item...">
+        <textarea id="large-task" cols="44" rows="10"></textarea>
+        <button id="large-task-button">
+          Submit
+        </button>
         <ul class="tooltip">
           <li class="tip"><span class="check"><i class="fa fa-check"></i></span>press 'enter' to create item</li>
           <li class="tip"><span class="check"><i class="fa fa-check"></i></span>press 'esc' to clear the text field</li>
