small css touch ups

--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
         <ul class="tooltip">
           <li class="tip"><span class="check"><i class="fa fa-check"></i></span>press 'enter' to create item</li>
           <li class="tip"><span class="check"><i class="fa fa-check"></i></span>press 'esc' to clear the text field</li>
-          <li class="tip"><span class="check"><i class="fa fa-check"></i></span>press 'down-array' key to get bigger text box</li>
+          <li class="tip"><span class="check"><i class="fa fa-check"></i></span>press 'down-arrow' key to get bigger text box</li>
         </ul>
 
         <div class="how-it-works">
