--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- Google Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lobster+Two:700,400' rel='stylesheet' type='text/css'>
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/reset.css">
