--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
   <link href='http://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lobster+Two:700,400' rel='stylesheet' type='text/css'>
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/reset.css">
@@ -18,21 +19,19 @@
 </head>
 <body>
 
-<nav class="top-nav">
+<nav class="main-top-nav">
   <div class="container">
-    <div class="social pull-left">
-      <ul>
-        <li><a href="#">G</a></li>
-        <li><a href="#">F</a></li>
-        <li><a href="#">T</a></li>
-      </ul>
+
+    <div class="logo pull-left">
+      <a href="index.html">jQueryShopper</a>
     </div>
-    <div class="menu pull-right">
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
+
+    <ul class="pull-right">
+      <li><a href="#">New List</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+
   </div>
 </nav>
 
