fix jumbotron button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <hgroup>
       <h1>jQuery Shopper</h1>
       <h2>An Application built to make creating your shopping list an enjoyable task.</h2>
-      <button class="pull-right">Start Now!</button>
+      <button class="pull-right"><a href="main.html">Start Now</a></button>
     </hgroup>
   </div>
 </header>
