add footer styles

--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@
 
 
 <footer>
-  <p>hello there</p>
+  <div class="container">
+    
+    <div class="copyright pull-right">
+      <p>This site is &copy; Matt Pedersen.</p>
+      <p>All rights reserved.</p>
+    </div>
+
+  </div>
 </footer>
 
 
