--- a/main.html
+++ b/main.html
@@ -80,7 +80,14 @@
 
   
 <footer>
-  <p>footer</p>
+  <div class="container">
+    
+    <div class="copyright pull-right">
+      <p>This site is &copy; Matt Pedersen.</p>
+      <p>All rights reserved.</p>
+    </div>
+
+  </div>
 </footer>
 
 <script src="js/jquery.min.js"></script>
