add css for main-right

--- a/main.html
+++ b/main.html
@@ -63,12 +63,43 @@
       <div class="right-side six-col one-offset">
         <h2>Your Shopping List</h2>
 
+        <p class="notice">Click an item to toggle it's completion state</p>
+
         <ul class="task-list">
-          <li class="task">
-            <h4>Hardcoded task #1</h4>
+          <li class="task red-incomplete">
+            <p>Lorem ipsum dolor sit.</p>
+            <br>
+            <span class="state">incomplete</span>
           </li>
-          <li class="task">
-            <h4>Hardcoded task #2</h4>
+          <li class="task green-complete">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <br>
+            <span class="state">complete</span>
+          </li>
+          <li class="task red-incomplete">
+            <p>Lorem ipsum dolor.</p>
+            <br>
+            <span class="state">incomplete</span>
+          </li>
+          <li class="task red-incomplete">
+            <p>Lorem ipsum.</p>
+            <br>
+            <span class="state">incomplete</span>
+          </li>
+          <li class="task green-complete">
+            <p>Lorem ipsum dolor.</p>
+            <br>
+            <span class="state">complete</span>
+          </li>
+          <li class="task green-complete">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <br>
+            <span class="state">complete</span>
+          </li>
+          <li class="task green-complete">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <br>
+            <span class="state">complete</span>
           </li>
         </ul>
       </div>
