add jquery to allow the changing of a tasks state

--- a/main.html
+++ b/main.html
@@ -66,40 +66,40 @@
         <p class="notice">Click an item to toggle it's completion state</p>
 
         <ul class="task-list">
-          <li class="task red-incomplete">
+          <li class="task incomplete">
             <p>Lorem ipsum dolor sit.</p>
             <br>
             <span class="state">incomplete</span>
           </li>
-          <li class="task green-complete">
+          <li class="task complete">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             <br>
-            <span class="state">complete</span>
+            <span class="state">incomplete</span>
           </li>
-          <li class="task red-incomplete">
+          <li class="task incomplete">
             <p>Lorem ipsum dolor.</p>
             <br>
             <span class="state">incomplete</span>
           </li>
-          <li class="task red-incomplete">
+          <li class="task incomplete">
             <p>Lorem ipsum.</p>
             <br>
             <span class="state">incomplete</span>
           </li>
-          <li class="task green-complete">
+          <li class="task complete">
             <p>Lorem ipsum dolor.</p>
             <br>
-            <span class="state">complete</span>
+            <span class="state">incomplete</span>
           </li>
-          <li class="task green-complete">
+          <li class="task complete">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             <br>
-            <span class="state">complete</span>
+            <span class="state">incomplete</span>
           </li>
-          <li class="task green-complete">
+          <li class="task complete">
             <p>Lorem ipsum dolor sit amet.</p>
             <br>
-            <span class="state">complete</span>
+            <span class="state incomplete">incomplete</span>
           </li>
         </ul>
       </div>
