complete sorting functionality of task-list

--- a/main.html
+++ b/main.html
@@ -99,7 +99,7 @@
           <li class="task complete">
             <p>Lorem ipsum dolor sit amet.</p>
             <br>
-            <span class="state incomplete">incomplete</span>
+            <span class="state">incomplete</span>
           </li>
         </ul>
       </div>
