add icons for index top nav social

--- a/index.html
+++ b/index.html
@@ -20,13 +20,27 @@
 
 <nav class="top-nav">
   <div class="container">
+
     <div class="social pull-left">
       <ul>
-        <li><a href="#">G</a></li>
-        <li><a href="#">F</a></li>
-        <li><a href="#">T</a></li>
+        <li>
+          <a href="#">
+            <i class="fa fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-twitter"></i>
+          </a>
+        </li>
       </ul>
     </div>
+
     <div class="menu pull-right">
       <ul>
         <li><a href="#">About</a></li>
@@ -41,7 +55,7 @@
     <hgroup>
       <h1>jQuery Shopper</h1>
       <h2>An Application built to make creating your shopping list an enjoyable task.</h2>
-      <button class="pull-right"><a href="main.html">Start Now</a></button>
+      <button class="pull-right"><a href="main.html">Start Now!</a></button>
     </hgroup>
   </div>
 </header>
