add no-task-notice and jquery to make it disappear when a task is entered

--- a/main.html
+++ b/main.html
@@ -63,44 +63,11 @@
       <div class="right-side six-col one-offset">
         <h2>Your Shopping List</h2>
 
-        <p class="notice">Click an item to toggle it's completion state</p>
+        <h3 class="no-task-notice">
+          No shopping items added
+        </h3>
 
         <ul class="task-list">
-          <li class="task incomplete">
-            <p>Lorem ipsum dolor sit.</p>
-            <br>
-            <span class="state">incomplete</span>
-          </li>
-          <li class="task complete">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <br>
-            <span class="state">incomplete</span>
-          </li>
-          <li class="task incomplete">
-            <p>Lorem ipsum dolor.</p>
-            <br>
-            <span class="state">incomplete</span>
-          </li>
-          <li class="task incomplete">
-            <p>Lorem ipsum.</p>
-            <br>
-            <span class="state">incomplete</span>
-          </li>
-          <li class="task complete">
-            <p>Lorem ipsum dolor.</p>
-            <br>
-            <span class="state">incomplete</span>
-          </li>
-          <li class="task complete">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <br>
-            <span class="state">incomplete</span>
-          </li>
-          <li class="task complete">
-            <p>Lorem ipsum dolor sit amet.</p>
-            <br>
-            <span class="state">incomplete</span>
-          </li>
         </ul>
       </div>
 
